[gd_scene load_steps=5 format=3 uid="uid://bplo0xxon7kth"]

[ext_resource type="Texture2D" uid="uid://c4cmmdaba7dev" path="res://assets/tutorials/tutorial_flask.png" id="1_yos8o"]
[ext_resource type="PackedScene" uid="uid://dsp5tqil3gvlt" path="res://scenes/e_indicator.tscn" id="2_ooujo"]
[ext_resource type="Script" uid="uid://cgle8ukn1dfp8" path="res://scripts/tutorial_flask.gd" id="2_yos8o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rogje"]
radius = 71.0634

[node name="tutorial_flask" type="Sprite2D"]
texture = ExtResource("1_yos8o")
script = ExtResource("2_yos8o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rogje")

[node name="E_indicator" parent="." instance=ExtResource("2_ooujo")]
position = Vector2(1, -76)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
